Correction visibilité flèches champs select en mode sombre

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,6 +327,10 @@ select {
   -webkit-appearance:none; /* Safari et Chrome */
 }
 
+.sombre select {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path fill="%23f5f5f5" d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>');
+}
+
 input[type="submit"] {
   border: transparent;
   margin: 15px auto 0px auto;
